--- a/courses.html
+++ b/courses.html
@@ -6,52 +6,7 @@
 <title>الدورات - CourseHub</title>
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-<!-- Google Identity Services -->
-<script src="https://accounts.google.com/gsi/client" async defer></script>
-<style>
-/* --- تحديث الخطوط والألوان --- */
-body { font-family: 'Inter', sans-serif; background-color: #f8f9fb; color: #333; margin:0; padding:0; line-height:1.6; }
-/* Header احترافي */
-header { background-color: #1c3faa; color: white; padding: 15px 20px; position: sticky; top:0; z-index:1000; }
-header .top-bar { display: flex; justify-content: space-between; align-items: center; gap:10px; }
-.logo a { display:flex; align-items:center; text-decoration:none; color:white; font-weight:700; font-size:28px; }
-nav a { color:white; text-decoration:none; margin-left:20px; font-weight:600; transition:0.3s; }
-nav a:hover { color:#ffcc00; }
-/* User Dropdown */
-.user-info-container { position: relative; display: flex; align-items: center; gap:10px; cursor:pointer; }
-.user-info-container img.user-pic { width:42px; height:42px; border-radius:50%; object-fit:cover; border:2px solid #ffcc00; }
-.user-info-container .dropdown-menu { display:none; position:absolute; right:0; top:55px; background:white; box-shadow:0 4px 12px rgba(0,0,0,0.15); border-radius:8px; overflow:hidden; z-index:999; min-width:180px; }
-.user-info-container.active .dropdown-menu { display:block; }
-.user-info-container .dropdown-menu a { display:block; padding:12px 15px; color:#333; text-decoration:none; font-weight:600; transition:0.3s; }
-.user-info-container .dropdown-menu a:hover { background-color:#f0f0f0; }
-/* Language & Notifications Buttons */
-.header-actions { display:flex; align-items:center; gap:15px; margin-left:20px; }
-.header-actions button { background:none; border:none; color:white; font-size:18px; cursor:pointer; position:relative; }
-.header-actions button:hover { color:#ffcc00; }
-.header-actions .notification-badge { position:absolute; top:-5px; right:-8px; background:#ff0000; color:white; border-radius:50%; font-size:10px; padding:2px 5px; }
-/* Search Bar */
-.search-bar { display:flex; justify-content:center; margin-top:10px; }
-.search-bar input { padding:10px; border-radius:5px 0 0 5px; border:1px solid #ccc; width:250px; }
-.search-bar button { padding:10px 15px; border:none; background-color:#ffcc00; color:#1c3faa; font-weight:700; border-radius:0 5px 5px 0; cursor:pointer; transition:all 0.3s; }
-.search-bar button:hover { background-color:#e6b800; }
-/* Courses Grid */
-.courses-grid { display:grid; grid-template-columns:repeat(auto-fit,minmax(260px,1fr)); gap:25px; margin-top:20px; }
-.card { background:white; border-radius:10px; overflow:hidden; box-shadow:0 4px 12px rgba(0,0,0,0.08); transition:0.3s; }
-.card:hover { transform:translateY(-5px); box-shadow:0 8px 25px rgba(0,0,0,0.12); }
-.card img { width:100%; height:160px; object-fit:cover; }
-.card-content { padding:15px; }
-.card-content h3 { font-size:18px; font-weight:700; margin-bottom:8px; color:#1c3faa; }
-.card-content p { font-size:14px; color:#555; margin-bottom:10px; }
-.card-content .btn { display:inline-block; padding:8px 15px; font-size:14px; background-color:#ffcc00; color:#1c3faa; border-radius:5px; text-decoration:none; font-weight:700; }
-.card-content .btn:hover { background-color:#e6b800; }
-.rating { color:#f1c40f; margin-bottom:10px; }
-/* Footer */
-footer { background-color:#1c3faa; color:white; padding:40px 20px; text-align:center; }
-footer a { color:#ffcc00; text-decoration:none; margin:0 10px; }
-footer a:hover { text-decoration:underline; }
-/* Responsive */
-@media(max-width:768px){ .search-bar { flex-direction:column; gap:10px; } .courses-grid { grid-template-columns:1fr; } .top-bar { flex-direction:column; align-items:flex-start; } }
-</style>
+<script src="main.js" defer></script>
 </head>
 <body>
 
@@ -62,28 +17,8 @@ footer a:hover { text-decoration:underline; }
      data-auto_prompt="false">
 </div>
 
-<!-- Header -->
-<header>
-  <div class="top-bar container">
-    <div class="logo"><a href="index.html">CourseHub</a></div>
-    <nav>
-      <a href="index.html">الرئيسية</a>
-      <a href="courses.html">الدورات</a>
-      <a href="certificates.html">الشهادات</a>
-      <a href="tests.html">الاختبارات</a>
-      <a href="login.html" id="login-link">تسجيل الدخول</a>
-    </nav>
-    <div class="header-actions">
-      <button id="langBtn"><i class="fa fa-globe"></i> عربي</button>
-      <button id="notifBtn"><i class="fa fa-bell"></i><span class="notification-badge" id="notifBadge">3</span></button>
-    </div>
-    <div class="user-info-container" id="user-info"></div>
-  </div>
-  <div class="search-bar container">
-    <input type="text" id="searchInput" placeholder="ابحث عن دورة...">
-    <button onclick="searchCourses()"><i class="fa fa-search"></i> بحث</button>
-  </div>
-</header>
+<!-- Header Placeholder -->
+<div id="header-placeholder"></div>
 
 <!-- Courses Section -->
 <section class="container">
@@ -125,72 +60,8 @@ footer a:hover { text-decoration:underline; }
   </div>
 </section>
 
-<!-- Footer -->
-<footer>
-  <div class="container footer-content">
-    <div class="footer-links">
-      <a href="index.html">الرئيسية</a>
-      <a href="courses.html">الدورات</a>
-      <a href="tests.html">الاختبارات</a>
-      <a href="certificates.html">الشهادات</a>
-      <a href="login.html">تسجيل الدخول</a>
-    </div>
-    <div class="socials">
-      <a href="#"><i class="fab fa-facebook-f"></i></a>
-      <a href="#"><i class="fab fa-twitter"></i></a>
-      <a href="#"><i class="fab fa-instagram"></i></a>
-      <a href="#"><i class="fab fa-linkedin-in"></i></a>
-    </div>
-    <p>&copy; 2026 CourseHub. جميع الحقوق محفوظة.</p>
-  </div>
-</footer>
+<!-- Footer Placeholder -->
+<div id="footer-placeholder"></div>
 
-<script src="main.js"></script>
-<script>
-// Google Login Handler & User Display
-function handleGoogleLogin(response){
-    const jwt = response.credential;
-    const payload = JSON.parse(atob(jwt.split('.')[1]));
-    localStorage.setItem("coursehub_user", JSON.stringify({
-        name: payload.name,
-        email: payload.email,
-        picture: payload.picture
-    }));
-    location.reload();
-}
-
-// عرض المستخدم إذا مسجل الدخول
-const user = JSON.parse(localStorage.getItem("coursehub_user"));
-if(user){
-    document.getElementById('login-link').style.display='none';
-    const userContainer = document.getElementById('user-info');
-    userContainer.innerHTML = `
-        <img src="${user.picture}" alt="${user.name}" class="user-pic">
-        <span>${user.name}</span>
-        <div class="dropdown-menu">
-            <a href="profile.html">حسابي</a>
-            <a href="profile.html#achievements">إنجازاتي</a>
-            <a href="profile.html#my-courses">دوراتي</a>
-            <a href="profile.html#settings">الإعدادات</a>
-            <a href="#" onclick="logout()">تسجيل الخروج</a>
-        </div>
-    `;
-    userContainer.classList.add('active');
-    // Dropdown toggle
-    userContainer.addEventListener('click', () => {
-        userContainer.classList.toggle('active');
-    });
-    // Close dropdown عند الضغط خارج
-    document.addEventListener('click', e => {
-        if(!userContainer.contains(e.target)) userContainer.classList.remove('active');
-    });
-}
-
-// Logout
-function logout(){
-    localStorage.removeItem("coursehub_user");
-    window.location.href='login.html';
-}
-</script>
 </body>
 </html>
