--- a/certificates.html
+++ b/certificates.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html lang="ar">
 <head>
-  <link rel="stylesheet" href="header.css">
 
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="header.css">
+  <link rel="stylesheet" href="footer.css">
+  
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>الشهادات - CourseHub</title>
@@ -41,8 +44,9 @@
 <div id="footer-placeholder"></div>
 
 <script>
-  // لا حاجة لإعادة تحميل الهيدر والفوتر هنا، main.js يتولى ذلك
-</script>
+ <script src="header.js"></script>
+  <script src="footer.js"></script>
+  <script src="main.js"></script>
 
 </body>
 </html>
