--- a/courses.html
+++ b/courses.html
@@ -62,7 +62,7 @@
   </div>
 </section>
 
-<!-- Footer Placeholder -->
+<link rel="stylesheet" href="footer.css">
 <div id="footer-placeholder"></div>
 
 </body>
