--- a/login.html
+++ b/login.html
@@ -71,6 +71,7 @@ function handleGoogleLogin(response) {
   // تحويل للرئيسية بعد تسجيل الدخول
   window.location.href = "index.html";
 }
+  <link rel="stylesheet" href="footer.css">
 </script>
 
 </body>
