--- a/tests.html
+++ b/tests.html
@@ -40,6 +40,7 @@
 <div id="footer-placeholder"></div>
 
 <!-- Main JS لاستدعاء الهيدر والفوتر -->
+  <link rel="stylesheet" href="footer.css">
 <script src="main.js"></script>
 
 </body>
