--- a/register.html
+++ b/register.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="ar">
 <head>
-<link rel="stylesheet" href="header.css">
+  <link rel="stylesheet" href="header.css">
+
 
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -36,7 +37,7 @@
 <!-- ملفات تسجيل الحساب -->
 <script src="firebase-config.js"></script>
 <script src="register.js"></script>
-  <link rel="stylesheet" href="header.css">
+  <link rel="stylesheet" href="footer.css">
 
 </body>
 </html>
