--- a/public/courses.html
+++ b/public/courses.html
@@ -33,7 +33,7 @@
   </div>
   <div class="courses-grid" id="coursesGrid">
     <div class="card" data-category="web">
-      <img src="../images/course1.jpg" alt="Course 1">
+      <img src="images/course1.jpg" alt="Course 1">
       <div class="card-content">
         <h3>تطوير الويب للمبتدئين</h3>
         <div class="rating"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-alt"></i><span>(1200 طالب)</span></div>
@@ -42,7 +42,7 @@
       </div>
     </div>
     <div class="card" data-category="ai">
-      <img src="../images/course2.jpg" alt="Course 2">
+      <img src="images/course2.jpg" alt="Course 2">
       <div class="card-content">
         <h3>الذكاء الاصطناعي</h3>
         <div class="rating"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><span>(950 طالب)</span></div>
@@ -51,7 +51,7 @@
       </div>
     </div>
     <div class="card" data-category="design">
-      <img src="../images/course3.jpg" alt="Course 3">
+      <img src="images/course3.jpg" alt="Course 3">
       <div class="card-content">
         <h3>التصميم الجرافيكي</h3>
         <div class="rating"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><span>(800 طالب)</span></div>
