--- a/public/index.html
+++ b/public/index.html
@@ -103,6 +103,7 @@ function handleGoogleLogin(response) {
     }));
     location.reload();
 }
+     <script>
 <link rel="stylesheet" href="footer.css">
 <div id="footer-placeholder"></div>
 
