--- a/public/login.html
+++ b/public/login.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ar">
 <head>
+<link rel="stylesheet" href="login.css">
 <link rel="stylesheet" href="header.css">
   
    
