--- a/public/header.html
+++ b/public/header.html
@@ -1,19 +1,26 @@
 <header>
   <div class="top-bar container">
+    <!-- Site Name Left -->
+    <div class="site-name">
+      <a href="index.html">CourseHub</a>
+    </div>
+
     <!-- Navigation -->
     <nav>
       <a href="index.html">الرئيسية</a>
       <a href="courses.html">الدورات</a>
       <a href="tests.html">الاختبارات</a>
       <a href="certificates.html">الشهادات</a>
-      <a href="login.html" id="login-link">تسجيل الدخول</a>
     </nav>
 
     <!-- Header Actions -->
     <div class="header-actions">
       <button id="langBtn"><i class="fa fa-globe"></i> عربي</button>
       <button id="notifBtn"><i class="fa fa-bell"></i><span class="notification-badge" id="notifBadge">3</span></button>
+      
+      <!-- User Info / Login -->
       <div id="user-info" class="user-info-container"></div>
+      <a href="login.html" id="login-link" class="login-btn">تسجيل الدخول</a>
     </div>
   </div>
 
