--- a/public/header.html
+++ b/public/header.html
@@ -4,7 +4,12 @@
     <div class="site-name">
       <a href="index.html">CourseHub</a>
     </div>
-
+  <!-- Search Bar -->
+    <div class="search-bar">
+      <input type="text" id="searchInput" placeholder="ابحث عن دورة...">
+      <button id="searchBtn"><i class="fa fa-search"></i></button>
+    </div>
+    
     <!-- Navigation -->
     <nav>
       <a href="index.html">الرئيسية</a>
@@ -13,21 +18,14 @@
       <a href="certificates.html">الشهادات</a>
     </nav>
 
+     <!-- Header Actions -->
     <div class="header-actions">
       <button id="langBtn"><i class="fa fa-globe"></i> عربي</button>
       <button id="notifBtn"><i class="fa fa-bell"></i><span class="notification-badge" id="notifBadge">3</span></button>
-
-      <!-- زر تسجيل الدخول -->
       <a href="login.html" id="login-link">تسجيل الدخول</a>
-
-      <!-- مكان اسم المستخدم يظهر فقط عند تسجيل الدخول -->
       <div id="user-info" class="user-info-container"></div>
     </div>
   </div>
 
-  <!-- Search Bar (ديناميكي) -->
-  <div class="search-bar container" id="headerSearchBar" style="display:none;">
-    <input type="text" id="searchInput" placeholder="ابحث عن دورة...">
-    <button id="searchBtn"><i class="fa fa-search"></i> بحث</button>
-  </div>
+   
 </header>
