--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html lang="ar">
 <head>
-
-<link rel="stylesheet" href="header.css">
-
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>CourseHub - تعلم واحصل على شهادتك</title>
@@ -12,9 +9,9 @@
 
 <!-- خطوط جوجل -->
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="header.css">
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-
 <script src="https://accounts.google.com/gsi/client" async defer></script>
 <script src="main.js" defer></script>
 </head>
@@ -30,7 +27,7 @@
 <!-- Header Placeholder -->
 <div id="header-placeholder"></div>
 
-<!-- Hero -->
+<!-- Hero Section -->
 <section class="hero">
   <div class="hero-content">
     <h1>ابدأ رحلتك التعليمية الآن!</h1>
@@ -39,51 +36,51 @@
   </div>
 </section>
 
-<!-- Features -->
+<!-- Features Section -->
 <section class="features container">
   <div class="feature">
-    <i class="fa fa-users"></i>
+    <i class="fa fa-users fa-2x"></i>
     <h3>آلاف الطلاب</h3>
     <p>انضم إلى مجتمع ضخم من المتعلمين حول العالم.</p>
   </div>
   <div class="feature">
-    <i class="fa fa-certificate"></i>
+    <i class="fa fa-certificate fa-2x"></i>
     <h3>شهادات معتمدة</h3>
     <p>احصل على شهادة رسمية عند إتمام الدورة بنجاح.</p>
   </div>
   <div class="feature">
-    <i class="fa fa-laptop-code"></i>
+    <i class="fa fa-laptop-code fa-2x"></i>
     <h3>دورات احترافية</h3>
     <p>تعلم من خبراء وابدأ مسارك المهني بسرعة.</p>
   </div>
 </section>
 
-<!-- Popular Courses -->
+<!-- Popular Courses Section -->
 <section class="popular-courses container">
   <h2>الدورات الأكثر شعبية</h2>
   <div class="courses-grid">
     <div class="card">
-      <img src="images/course1.jpg" alt="Course">
+      <img src="images/course1.jpg" alt="تطوير الويب للمبتدئين">
       <div class="card-content">
         <h3>تطوير الويب للمبتدئين</h3>
         <p>تعلم HTML و CSS و JavaScript خطوة بخطوة.</p>
-        <a href="course-details.html" class="btn">عرض الدورة</a>
+        <a href="course-details.html" class="btn btn-card">عرض الدورة</a>
       </div>
     </div>
     <div class="card">
-      <img src="images/course2.jpg" alt="Course">
+      <img src="images/course2.jpg" alt="الذكاء الاصطناعي">
       <div class="card-content">
         <h3>الذكاء الاصطناعي</h3>
         <p>ابدأ رحلتك مع تعلم الآلة والذكاء الاصطناعي.</p>
-        <a href="course-details.html" class="btn">عرض الدورة</a>
+        <a href="course-details.html" class="btn btn-card">عرض الدورة</a>
       </div>
     </div>
     <div class="card">
-      <img src="images/course3.jpg" alt="Course">
+      <img src="images/course3.jpg" alt="التصميم الجرافيكي">
       <div class="card-content">
         <h3>التصميم الجرافيكي</h3>
         <p>تعلم Photoshop و Illustrator من الصفر.</p>
-        <a href="course-details.html" class="btn">عرض الدورة</a>
+        <a href="course-details.html" class="btn btn-card">عرض الدورة</a>
       </div>
     </div>
   </div>
