--- a/public/achievements.html
+++ b/public/achievements.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
+  <link rel="stylesheet" href="header.css">
   <meta charset="UTF-8">
   <title>إنجازاتي | CourseHub</title>
 
@@ -54,7 +55,7 @@
     </section>
 
   </main>
-
+<link rel="stylesheet" href="footer.css">
   <script src="achievements.js"></script>
 </body>
 </html>
